--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,9 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-- name: mergestat
-  repo: https://helm.mergestat.com/
-  releaseName: mergestat
-  namespace: admin
-  version: 0.1.0
-  valuesFile: values.yaml
+- name: podinfo2
+  repo: https://stefanprodan.github.io/podinfo
+  releaseName: podinfo2
+  namespace: naikn
+  version: '6.7.0'
