--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-- name: podinfo2
+- name: podinfo
   repo: https://stefanprodan.github.io/podinfo
   releaseName: podinfo2
   namespace: naikn
