--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -8,3 +8,8 @@ helmCharts:
   releaseName: podinfo2
   namespace: naikn
   version: '6.7.0'
+
+patches:
+- path: overlays/labels.yaml
+  target:
+    kind: Deployment
